--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "weather_webside",
   "version": "0.1.0",
+  "homepage": "https://Alena-Abharian.github.io/weather_webside",
   "private": true,
+  "author": "Alena Abharian <alenar2531@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Alena-Abharian/weather_webside.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Alena-Abharian/weather_webside/issues"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -21,7 +30,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build src/*.html --public-url /weather_webside/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
